@@ -490,6 +490,7 @@ scid-3.6.25
 	* fixed pgnscid so importing a game over 32 kB does not lead to a segfault (but will output : Fatal error encoding game!)
 	* GAME EDITOR : with comment editor opened, browsing a game would flagged it as "to be saved", even if there was no change in NAGS and comment values
 	* fixed tooltip display bug on MacOs (thanks to Israel Chauca)
+	* when info is available, the first line of engine window displays mate distance
 - Annotation : added an option "mark tactical exercises". The tactical flag will be set to the game and a comment with ****d<depth>sc<score>. This option is only available when annotating with an UCI engine.
 - Training : find best move. Will go to the next tactical position marked with 4 stars (****). See "mark tactical exercises" in Annotation feature. Pressing the right mouse button on "goto last move" (">>") button will go to next tactical exercises. A training base of over 1500 games has been released (not included in Scid package).
 - added extra options to "sc_pos analyze" :
@@ -518,3 +519,6 @@ scid-3.6.25
 	* UCI options of engines are now sent, so if an engine has for example an UCI_Elo present and set up, playing a serious game will be done in fact with a weakened engine (then similar to Tactical game that is designed solely for Phalanx usage).
 	* added a "Configure engine" button to tweak an engine before playing (style, strength for example)
 - UCI engine configuration : spinbox entries are now user writable (a check is done to ensure input is correct)
+- UCI engine output :
+  * display mate indicator in multi variations (M5 instead of +327.00)
+  * added move numbers in multi variation lines
